--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <form id="chat">
         <div class="chat-view">
@@ -23,68 +25,85 @@
         </div>
     </form>
 
-    <script
-  src="https://code.jquery.com/jquery-3.6.0.min.js"
-  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-  crossorigin="anonymous"></script>
-  <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.socket.io/4.4.1/socket.io.min.js"
+        integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H"
+        crossorigin="anonymous"></script>
 
-  <script type="text/javascript">
-      var socket = io('http://localhost:3000');
+    <script type="text/javascript">
+        var socket = io('http://localhost:3000');
 
-      setTimeout(() => {
-        $("input[name=username]").val(socket.id);
-        $("input[name=message]").focus();
-      }, 1000)
+        setTimeout(() => {
+            $("input[name=username]").val(socket.id);
+            $("input[name=message]").focus();
+        }, 1000)
 
-      function renderMessage(message){
-          $('.messages').append('<div class="message"><strong>'+ message.author +'<strong>: '+ message.message +'</div>')
-      }
-      
-      function renderUser(user){
-          $('.chat-users ul').append('<li><strong>'+ user +'<strong></li>')
-      }
-
-      function clear() {
-        $("input[name=message]").val('');
-      }
-
-      socket.on('receivedMessage', function(message){
-          renderMessage(message);
-      })
-
-      socket.on('previousMessages', function(messages){
-        for(message of messages){
-            renderMessage(message);
+        function renderMessage(message) {
+            $('.messages').append('<div class="message"><strong>' + message.author + '<strong>: ' + message.message + '</div>')
         }
-      });
 
-      socket.on('previousUsers', function(users){
-          console.log(users)
-          for(user of users){
-              renderUser(user);
-          }
-      })
+        function renderUser(user) {
+            $('.chat-users ul').append('<li><strong>' + user + '<strong></li>')
+        }
 
-      $("#chat").submit(function(e){
-          e.preventDefault();
+        function userConnected(user) {
+            $('.messages').append('<div class="message"><i class="user-connected">* Conectado: <strong>' + user + '<strong></i></div>')
+        }
 
-          var author = $("input[name=username]").val();
-          var message = $("input[name=message]").val();
+        function userDisconnected(user) {
+            $('.messages').append('<div class="message"><i>* quit: usuário desconectado: <strong>' + user + '<strong></i></div>')
+        }
 
-          if(author.length && message.length) {
-              var messageObject = {
-                author: author,
-                message: message
-              };
+        function clear() {
+            $("input[name=message]").val('');
+        }
 
-              renderMessage(messageObject);
+        socket.on('receivedMessage', function (message) {
+            renderMessage(message);
+        })
 
-              socket.emit('sendMessage', messageObject);
-              
-              clear();
-          }
-      })
-  </script>
+        socket.on('previousMessages', function (messages) {
+            for (message of messages) {
+                renderMessage(message);
+            }
+        });
+
+        socket.on('userDisconnected', function(user){
+            userDisconnected(user);
+        })
+
+        socket.on('userConnected', function(user){
+            userConnected(user);
+        })
+
+        socket.on('previousUsers', function (users) {
+            $(".chat-users ul li").remove();
+            for (user of users) {
+                renderUser(user);
+            }
+        })
+
+        $("#chat").submit(function (e) {
+            e.preventDefault();
+
+            var author = $("input[name=username]").val();
+            var message = $("input[name=message]").val();
+
+            if (author.length && message.length) {
+                var messageObject = {
+                    author: author,
+                    message: message
+                };
+
+                renderMessage(messageObject);
+
+                socket.emit('sendMessage', messageObject);
+
+                clear();
+            }
+        })
+    </script>
 </body>
+
 </html>
